--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr-FR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -16,7 +16,7 @@
     </header>
     <main>
       <h2>Solde total:</h2>
-      <p id="balence">0</p>
+      <p id="balence">0.00€</p>
       <form action="" method="post">
         <label for="receive">demander de l'argent:</label>
         <!-- <select name="receive" id="receive">
